# syno_webhook

./: .dockerignore  .gitignore  Containerfile  Dockerfile  GEMINI.md  compose.yaml  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
src/webhook/: __init__.py  videos.py
